--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>index</title>
 </head>
-<body>
+<body style="margin-left: 25pt; margin-top: 25pt;">
+<nav>
+logo
+<a href="/dashboard.html" target="_blank">Dashboard</a>
+
+</nav>
+
+<main>
+    <h1>Heading</h1>
+<p>
+    this is the first <b>BOLD</b> paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, necessitatibus!
+</p>
+    <a href="https://www.google.com" target="_blank"> Click Here for Google</a>
+
+<a href="/dashboard.html" target="_blank">Go to Dashboard</a>
+<h1>Un-odered list</h1>
+<section>
+
+    <ul>
+
+        <li> Land $100k Jobs</li>
+        <li> Finish front-end simplified courese</li>
+        <li> network with other people</li>
+    </ul>
     
+
+</section>
+
+<img src="./images/laptop.png" alt="laptop images" style="float:right;">
+<h1>Ordered  List</h1>
+
+<section style="background-color: antiquewhite;">
+    <ol>
+        <li>finish Front_end simplified course</li>
+        <li> network with people</li>
+        <li> Land $100k job</li>
+        </ol>
+
+</section>
+</main>
+<footer>CopyRight terms and conditions</footer>
+
 </body>
 </html>
