--- a/practise.html
+++ b/practise.html
@@ -27,7 +27,6 @@
 </figure>
 </header>
 </nav>
-
 </section>
 
 <main>
@@ -71,7 +70,7 @@
 <footer> 
 <img src="./HTML Practise Assets/FES.svg" alt="">
 
-<div>
+<div style="text-align: center;">
 <a href="#about">about</a>
 <a href="#discord">discord</a>
 <a href="#contact">contact</a>
@@ -80,5 +79,5 @@
 </div>
 <p>Copyright Frontend simplified</p>
 </footer>
-</body>
+</body> 
 </html>
