--- a/media.html
+++ b/media.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./positionfixed.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
-    <div></div>
-    <div class="red"></div>
-    <div></div>
-    <div></div>
-    
+    <div>
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis possimus omnis dolor sunt at, quisquam quas consectetur architecto a excepturi.
+
+    </div>
+
+
 </body>
 </html>
